--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,8 +1,14 @@
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
+@import "reset";
+@import "variables/global";
+@import "themes/ligth";
+@import "themes/dark";
+
+
 .app {
-font-size: 32px;
+font: var(--font-m);
+
+background: var(--bg-color);
+color:var(--primary-color);
+
+min-height: 100vh;
 }
