--- a/src/app/styles/themes/normal.scss
+++ b/src/app/styles/themes/normal.scss
@@ -1,7 +1,7 @@
 :root {
     --bg-color: #c4c4d5;
     --inverted-bg-color: #15154d;
-    --primary-color: #14c676;
+    --primary-color: #000000;
     --secondary-color: #3a6311;
     --inverted-primary-color: #3c7991;
     --inverted-secondary-color: #55393f;
