--- a/src/app/styles/themes/dark.scss
+++ b/src/app/styles/themes/dark.scss
@@ -1,7 +1,7 @@
 .app.dark {
     --bg-color: #15154d;
     --inverted-bg-color: #c4c4d5;
-    --primary-color: #a3bcb1;
+    --primary-color: #11e4c5;
     --secondary-color: #55393f;
     --inverted-primary-color: #14c676;
     --inverted-secondary-color: #9dcc6d;
