--- a/src/shared/ui/Modal/Modal.module.scss
+++ b/src/shared/ui/Modal/Modal.module.scss
@@ -1,18 +1,24 @@
 .Modal {
     position: fixed;
     top: 0;
-    left: 0;
-    right: 0;
     bottom: 0;
+    right: 0;
+    left: 0;
     opacity: 0;
     pointer-events: none;
     z-index: -1;
+    color: var(--primary-color);
+}
+
+.Modal.dark {
+    --bg-color: #090949;
+    --primary-color: #04ff04;
 }
 
 .overlay {
     width: 100%;
     height: 100%;
-    background-color: var(--overlay-color);
+    background: var(--overlay-color);
     display: flex;
     align-items: center;
     justify-content: center;
@@ -30,6 +36,7 @@
 .opened {
     pointer-events: auto;
     opacity: 1;
+    z-index: var(--modal-z-index);
 
     .content {
         transform: scale(1);
